--- a/html1.html
+++ b/html1.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel ="stylesheet"type="text/css" href="style.css">
     <title>Recipe</title>
 </head>
 <body>
 <h2>how to make chocolate cake  </h2>
 <br>
-<h4>Ingredients</h4>
+<h4 style="color:blue;">Ingredients</h4>
  <table>
      <tr>
          <td>img src="image.jpg"</td>
@@ -27,6 +28,7 @@
          </td>
      </tr>
  </table>
+<div class="header"id ="step">
 <h4>Step-by-Step Instructions</h4>
 <table>
     <td>
@@ -39,6 +41,33 @@
         </ul>
     </td>
 </table>
+    </div>
+<div class="section">
+<h3>background color </h3>
+</div class="section">
+
+
+         <h2>Feedback</h2>
+
+    <tr>
+        <h3> Information :</h3>
+        <td>Name:</td>
+        <td><input type="text"></td>
+
+    </tr>
+
+
+
+    </tr>
+
+    <tr>
+
+
+
+        <td>input type="checkbox" </td>
+    </tr>
+
+</div>
 
 </body>
 </html>
