--- a/html1.html
+++ b/html1.html
@@ -54,18 +54,24 @@
         <td>Name:</td>
         <td><input type="text"></td>
 
+
+
     </tr>
-
-
-
+        <Td>Last name:</td>
+        <td> <input type="text"> </td>
     </tr>
 
     <tr>
 
 
-
-        <td>input type="checkbox" </td>
     </tr>
+<tr>
+    <h4>
+       <td>single:</td>
+    <td><input type="checkbox"> </td>
+    </h4>
+
+</tr>
 
 </div>
 
